--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -23,9 +23,10 @@ jobs:
         distribution: 'temurin'
         cache: 'sbt'
     - name: Run tests
-      run: sbt test
-      working-directory: ./CasinoApp
+      run: |
+        cd CasinoApp
+        sbt test
     - name: Upload dependency graph
       uses: scalacenter/sbt-dependency-submission@ab086b50c947c9774b70f39fc7f6e20ca2706c91
       with:
-        working-directory: ./CasinoApp
+        token: ${{ secrets.GITHUB_TOKEN }}
