--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -23,10 +23,10 @@ jobs:
         distribution: 'temurin'
         cache: 'sbt'
     - name: Run tests
-      run: |
-        cd CasinoApp
-        sbt test
+      run: sbt test
+      working-directory: ./CasinoApp
     - name: Upload dependency graph
-      uses: scalacenter/sbt-dependency-submission@ab086b50c947c9774b70f39fc7f6e20ca2706c91
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      run: sbt githubSubmitDependencyGraph
+      working-directory: ./CasinoApp
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
