--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -26,7 +26,7 @@ jobs:
       run: sbt test
       working-directory: ./CasinoApp
     - name: Upload dependency graph
-      run: sbt githubSubmitDependencyGraph
+      run: sbt addDependencyTreePlugin
       working-directory: ./CasinoApp
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
