--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -25,8 +25,25 @@ jobs:
     - name: Run tests
       run: sbt test
       working-directory: ./CasinoApp
-    - name: Upload dependency graph
-      run: sbt addDependencyTreePlugin
+    - name: Create fat JAR
+      run: sbt assembly
       working-directory: ./CasinoApp
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v1.0.0
+        release_name: Release v1.0.0
+        draft: false
+        prerelease: false
+    - name: Upload JAR to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./CasinoApp/target/scala-2.13/CasinoApp-assembly-0.1.0-SNAPSHOT.jar
+        asset_name: CasinoApp-assembly-0.1.0-SNAPSHOT.jar
+        asset_content_type: application/java-archive
